welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
var nbpas:int=0
          ^Variables:5: error: not found: value nbpa
	nbpa s= nbpas+1
        ^